--- a/.github/workflows/aws-docker-deploy.yml
+++ b/.github/workflows/aws-docker-deploy.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: [your dockerhub id]/331-securitylab:latest
+          tags: blackneko1234/331-securitylab:latest
       -
         name: prepare the docker-compose run
         run: |
